...
        actions: [
          BlocBuilder<FavoritesBloc, FavoritesState>(
            builder: (context, favoritesState) {
              final isFavorite = favoritesState.favorites.contains(coinId);

              return IconButton(
                key: const Key('favorite_button'),
                icon: Icon(isFavorite ? Icons.favorite : Icons.favorite_border),
                onPressed: () {
                  if (isFavorite) {
                    context.read<FavoritesBloc>().add(RemoveFavorite(coinId));
                  } else {
                    context.read<FavoritesBloc>().add(AddFavorite(coinId));
...
